2003-12-08  Shaun McCance  <shaunm@gnome.org>

	* configure.in: Version 2.5.1.

2003-12-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Fixed a crasher with gnome_vfs_directory_close.

	* src/yelp-window.c:
	- Moved a declaration to the beginning for ANSI C.

2003-12-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-pager.c:
	- Checking for NULL in pager_set_property before g_object_ref'ing.

2003-12-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Patch from Diego González to fix crashing bug in g_object_new.

2003-12-05  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c
	- Patch from Chee Bin HOH to add Back, Forward, and Find in Page

2003-12-03  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Patch from Joe Markus Clarke not to free un-malloc'd memory.

	* src/yelp-toc-pager.c:
	- Fixed problem with un-malloc'd memory being free found by
	  Joe Markus Clarke.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* src/.cvsignore:
	- It's test-pager, not yelp-pager.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* data/.cvsignore:
	* src/.cvsignore:
	- Adding data/toc.xml and src/test-pager to .cvsignore

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Change to the way toc pages are pruned so that we don't get orphaned
	  Categories headers.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* configure.in: Version 2.5.0.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Removed the DOCTYPE, because it was passing straight through intltool
	  and the resultant toc.xml had an incorrent DOCTYPE.
	- Rearranged the menu a bit.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Don't require top element id to be index.

2003-12-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Changed the way toc nodes are processed to give a depth-first,
	  post-order traversal.  This way I can prune empty toc pages.
